--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,11 @@
 <body>
     <div class="container">
         <header>
-            <a href="{{ url_for('home') }}"><h1>Content Agregator v1</h1></a>
+          <div class="row justify-content-center">
+            <div class="col">
+              <h1><a href="{{ url_for('home') }}">Content Agregator v1</a></h1>
+            </div>
+          </div>
         </header>
          <div class="row justify-content-center">
            <main role="main" class="container">
