--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,6 @@
 body, html {
   margin: 0;
-  background-image: linear-gradient(to bottom, #7C296A, #44887B);
+  background-image: linear-gradient(to bottom, #403075, #07060C);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,11 +21,13 @@ body, html {
 h1 {
   text-align: center;
   padding-bottom: 50px;
+  width: auto;
 }
 
 h2 {
   text-align: center;
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 ul {
@@ -45,7 +47,7 @@ span {
 }
 
 a:hover {
-    color: black;
+    color: #9775AA;
     text-decoration: none;
 }
 
@@ -57,12 +59,13 @@ a:hover {
 p {
     font-size: 20px;
     text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .mark {
     color: black;
     text-decoration: none;
-    padding-left: 10px;
 }
 
 .mark-as {
@@ -84,6 +87,7 @@ footer {
     color: white;
     text-align: center;
     font-size: 12px;
+    background-color: black;
 }
 
 a {
@@ -127,7 +131,79 @@ img {
   margin-right: auto;
 }
 
+.zoom {
+  transition: transform .2s;
+}
+
+.zoom:hover {
+  transform: scale(1.5);
+}
+
 .row-my {
   width: 100%;
   margin: 0;
+  padding-top: 100px;
+}
+
+.newses {
+  background-color: white;
+  font-size: 16px;
+  border-style: groove;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #9078AD;
+  min-width: 1000px;
+}
+
+.cont {
+  position: relative;
+}
+
+.main-img {
+  width: 50%;
+  height: 40%;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #6D4E90;
+}
+
+.cont:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+.move-down {
+  padding-top: 200px;
+}
+
+.rd-img {
+  width: 100%;
+  height: 100%;
+}
+
+.test {
+  width: 80%;
+}
+
+.test-p {
+  padding-bottom: 20px;
 }
