--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,25 +2,25 @@
 {% block app %}
 <div class="container">
   <div class="row row-my">
-    <div class="col justify-content-center">
+    <div class="col justify-content-center zoom">
       <a href="{{ url_for('google') }}"><img src="static/img/news-report.png"/><p>Google News</p></a>
     </div>
-    <div class="col justify-content-center">
-      <a href="{{ url_for('reddit') }}"><img src="static/img/reddit.png"/><p>Reddit News</p></a>
+    <div class="col justify-content-center zoom">
+      <a href="{{ url_for('bbc') }}"><img src="static/img/bbc.png"/><p>BBC News</p></a>
     </div>
-    <div class="col justify-content-center">
-      <a href="{{ url_for('google') }}"><img src="static/img/news-report.png"/><p>Google News</p></a>
+    <div class="col justify-content-center zoom">
+      <a href="{{ url_for('cnn') }}"><img src="static/img/cnn.png"/><p>CNN News</p></a>
     </div>
   </div>
   <div class="row row-my">
-    <div class="col">
-      <a href="{{ url_for('google') }}"><h2>Google News</h2></a>
+    <div class="col justify-content-center zoom">
+      <a href="{{ url_for('test') }}"><img src="static/img/test.png"/><h2>Test News</h2></a>
     </div>
-    <div class="col">
-      <a href="{{ url_for('google') }}"><h2>Google News</h2></a>
+    <div class="col justify-content-center zoom">
+      <a href="#"><img src="static/img/test.png"/><h2>Test News</h2></a>
     </div>
-    <div class="col">
-      <a href="{{ url_for('google') }}"><h2>Google News</h2></a>
+    <div class="col justify-content-center zoom">
+      <a href="#"><img src="static/img/test.png"/><h2>Test News</h2></a>
     </div>
   </div>
 </div>
