--- a/contentagregator/modules/auth/templates/index.html
+++ b/contentagregator/modules/auth/templates/index.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row row-my">
     <div class="col justify-content-center zoom">
-      <a href="{{ url_for('google_get') }}"><img src="static/img/news-report.png"/><p>Google News</p></a>
+      <a href="{{ url_for('google_get_view') }}"><img src="{{ url_for('google.static', filename='img/google.png') }}"/><p>Google News</p></a>
     </div>
     <div class="col justify-content-center zoom">
       <a href="{{ url_for('bbc_get_view') }}"><img src="{{ url_for('bbc.static', filename='img/bbc.png') }}"/><p>BBC News</p></a>
