--- a/contentagregator/static/css/general.css
+++ b/contentagregator/static/css/general.css
@@ -207,51 +207,6 @@ img {
   color: #EADAEE;
 }
 
-.preload {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 10000;
-    visibility: hidden;
-    opacity: 0;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    background-color: white;
-    transition: opacity 500ms ease-in-out, visibility 0s 500ms;
-}
-
-.show-preloader {
-    visibility: visible;
-    opacity: 1;
-}
-
-.circle {
-    background-color: black;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    display: inline-block;
-    animation: bounce-circles 0.7s infinite ease-in-out;
-}
-
-.preload .circle:nth-child(1) {
-     animation-delay: -0.6s;
-}
-
-.preload .circle:nth-child(2) {
-     animation-delay: -0.5s;
-}
-
-.preload .circle:nth-child(3) {
-     animation-delay: -0.4s;
-}
-
-.preload .circle:nth-child(4) {
-    animation-delay: -0.3s;
-}
-
 @keyframes bounce-circles {
     0%, 40%, 100% {
  		transform: translateY(-10px);
@@ -318,4 +273,9 @@ input[type=submit]:hover {
 .me {
   width: 80%;
   height: 90%;
+}
+
+.active-item:hover {
+  background-color: rgb(119, 68, 115);
+  color: white;
 }
