--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -10,16 +10,9 @@
     {% assets 'base_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
     {% endassets %}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 </head>
 <body>
-  <div class="preload">
-    <div class="circles-group">
-     	<div class="circle"></div>
-     	<div class="circle"></div>
-     	<div class="circle"></div>
-     	<div class="circle"></div>
-    </div>
-  </div>
     <div class="container">
       <ul class="nav justify-content-center">
         <li class="nav-item">
@@ -31,7 +24,19 @@
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/Czembri">Github</a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Authentication</a>
+          <div class="dropdown-menu">
+            {% if session.logged_in %}
+            <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
+            {% else %}
+            <a class="dropdown-item" href="{{ url_for('login') }}">Login</a>
+            <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
+            {% endif %}
+          </div>
+        </li>
       </ul>
+      
         <header>
           <div class="row justify-content-center">
             <div class="col">
@@ -46,8 +51,9 @@
                 {% with messages = get_flashed_messages(with_categories=true) %}
                   {% if messages %}
                     {% for category, message in messages %}
-                      <div class="alert alert-{{ category }}">
-                        {{ message }}
+                    <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <strong>{{ message }}</strong> 
                       </div>
                     {% endfor %}
                   {% endif %}
@@ -62,6 +68,6 @@
         </div>
     </div>
     {% block scripts %} {% endblock %}
-    <script src="{{ url_for('static', filename='scripts/preloader.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='scripts/base.js') }}"></script>
 </body>
 </html>
