new config for the app, contacts form created, sending emails from app

--- a/contentagregator/static/css/general.css
+++ b/contentagregator/static/css/general.css
@@ -270,9 +270,9 @@ input[type=submit]:hover {
   }
 }
 
-.me {
-  width: 80%;
-  height: 90%;
+.chill {
+  width: 522px;
+  height: 601px;
 }
 
 .active-item:hover {
