--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" href="/about">About APP</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact Me</a>
+          <a class="nav-link" href="{{ url_for('contact_form_view') }}">Contact Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/Czembri">Github</a>
@@ -56,7 +56,7 @@
                     {% block content %}{% endblock %}
                   </div>
                 </main>
-              <h1><a href="/news">Content Agregator v1</a></h1>
+              <h1><a href="/">Content Agregator v1</a></h1>
             </div>
           </div>
         </header>
