--- a/contentagregator/modules/rmf/templates/rmf.html
+++ b/contentagregator/modules/rmf/templates/rmf.html
@@ -5,15 +5,15 @@
 {% block app %}
 <div class="row justify-content-center">
   <div class='col'>
-    <h2>Google News</h2>
+    <h2>RMF24</h2>
     <div class="newses"></div>
   </div>
 </div>
 <div class="row justify-content-center move-down">
   <div class="col">
-    <a href="https://news.google.com/?hl=en-US&gl=US&ceid=US:en">
+    <a href="https://www.rmf24.pl/">
       <div class="cont">
-        <img class="main-img" src="{{ url_for('google.static', filename='img/google.png') }}"/>
+        <img class="main-img" src="{{ url_for('rmf.static', filename='img/RMF_FM_logo.svg.png') }}"/>
         <div class="overlay">
           <div class="text">Click Me</div>
           <h5>To get more info...</h5>
@@ -24,5 +24,5 @@
 </div>
 {% endblock %}
 {% block scripts %} 
-<script src="{{ url_for('google.static', filename='scripts/google.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('rmf.static', filename='scripts/rmf.js') }}" type="text/javascript"></script>
 {% endblock %}
