--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -43,16 +43,12 @@
               <main role="main" class="container">
                 <div class="row justify-content-center">
                   <div>
-                    {% with messages = get_flashed_messages(with_categories=true) %}
-                      {% if messages %}
-                        {% for category, message in messages %}
+                    {% for category, message in get_flashed_messages(with_categories=True) %}
                         <div class="alert alert-{{ category }} alert-dismissible" role="alert">
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                           <strong>{{ message }}</strong> 
                           </div>
-                        {% endfor %}
-                      {% endif %}
-                    {% endwith %}
+                    {% endfor %}
                     {% block content %}{% endblock %}
                   </div>
                 </main>
