--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -66,5 +66,6 @@
     </div>
     {% block scripts %} {% endblock %}
     <script src="{{ url_for('static', filename='scripts/base.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/common.js') }}"></script>
 </body>
 </html>
