redactor zone endpoint rules

--- a/contentagregator/modules/auth/templates/index.html
+++ b/contentagregator/modules/auth/templates/index.html
@@ -6,7 +6,7 @@
       <a href="{{ url_for('news') }}"><h2>I want to <strong>see</strong> the news</h2></a>
     </div>
     <div class="col d-flex justify-content-center">
-      <a href="#"><h2>I want to <strong>write</strong> the news</h2></a>
+      <a href="{{ url_for('redactor_zone_get_view') }}"><h2>I want to <strong>write</strong> the news</h2></a>
     </div>
   </div>
 </div>
