styling the app

--- a/contentagregator/modules/auth/templates/choose_news.html
+++ b/contentagregator/modules/auth/templates/choose_news.html
@@ -14,13 +14,13 @@
   </div>
   <div class="row row-my">
     <div class="col justify-content-center zoom">
-      <a href="{{ url_for('rmf_get_view') }}"><img src="{{ url_for('rmf.static', filename='img/RMF_FM_logo.svg.png') }}"/><h2>RMF24</h2></a>
+      <a href="{{ url_for('rmf_get_view') }}"><img src="{{ url_for('rmf.static', filename='img/RMF_FM_logo.svg.png') }}"/><p>RMF24</p></a>
     </div>
     <div class="col justify-content-center zoom">
-      <a href="{{ url_for('test') }}"><img src="static/img/test.png"/><h2>Test News</h2></a>
+      <a href="{{ url_for('test') }}"><img src="static/img/test.png"/><p>Test News</p></a>
     </div>
     <div class="col justify-content-center zoom">
-      <a href="{{ url_for('test') }}"><img src="static/img/test.png"/><h2>Test News</h2></a>
+      <a href="{{ url_for('test') }}"><img src="static/img/test.png"/><p>Test News</p></a>
     </div>
   </div>
 </div>
