--- a/contentagregator/modules/auth/templates/index.html
+++ b/contentagregator/modules/auth/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block app %}
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" style="margin-top: 25%;">
     <div class="col d-flex justify-content-center">
       <a href="{{ url_for('news') }}"><h2>I want to <strong>see</strong> the news</h2></a>
     </div>
