--- a/contentagregator/modules/communicates/static/css/test.css
+++ b/contentagregator/modules/communicates/static/css/test.css
@@ -1,29 +1,14 @@
-body, html {
-    margin: 0;
-    background-image: linear-gradient(to bottom, #403075, #07060C);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-    width: 100%;
-    overflow: visible;
-    color: white;
-    font-family: 'Tomorrow', sans-serif;
-    position:absolute;
-  }
-
   .rd-img {
-    width: 60%;
-    height: 80%;
+    width: 40%;
+    height: 60%;
   }
   
   .test {
     width: 80%;
+    height: 80%;
+    margin: 20px auto;
   }
   
-  .test-p {
-    padding-bottom: 20px;
-  }
 
   a {
       text-decoration: none;
