--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -40,7 +40,7 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Your zone</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">Your articles</a>
-                <a class="dropdown-item" href="#">Create an article</a>
+                <a class="dropdown-item" href="{{ url_for('create_an_article') }}">Create an article</a>
                 <a class="dropdown-item" href="#">Invite to Your zone</a>
                 <a class="dropdown-item" href="#">Achievements</a>
               </div>
