--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -86,7 +86,7 @@
         <header>
           <div class="row justify-content-center">
             <div class="col">
-              <main role="main" class="container">
+              <main role="main" class="container-fluid">
                 <div class="row justify-content-center">
                   <div>
                     {% for category, message in get_flashed_messages(with_categories=True) %}
