--- a/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
+++ b/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
@@ -67,7 +67,7 @@ div#wave .dot:nth-child(3) {
   min-width: 20vw;
 }
 
-.title-container {
+.title-container, .buttons-container {
   min-width: 1000px !important;
   margin: 50px auto;
 }
@@ -76,3 +76,20 @@ div#wave .dot:nth-child(3) {
   max-width: 500px;
 }
 
+#editor {
+  min-height: 300px;
+}
+
+.article-text-container {
+  padding-bottom: 30px;
+}
+
+.choose-attachment {
+  background-color: rgb(99, 67, 122);
+  color: white;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
