--- a/contentagregator/static/css/general.css
+++ b/contentagregator/static/css/general.css
@@ -7,6 +7,14 @@ body, html {
   color: white;
 }
 
+body {
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+ display: none;
+}
+
 .container {
   width: 100%;
   min-width: 800px;
