add attachments refactor

--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{{ url_for('redactor_zone.static', filename='css/redactor_zone.css') }}">
 {% endblock %}
 {% block app %}
-<form method='POST'>
+<form method='POST' enctype='multipart/form-data'>
     <div class="container">
         <div class="row justify-content-center">
             <div class="d-flex justify-content-center">
