--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="{{ url_for('contact_form_view') }}">Contact Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/Czembri">Github</a>
+              <a class="nav-link" href="https://github.com/Czembri">GitHub</a>
             </li>
             {% endif %}
             {% if session['redactor'] %}
