--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -15,25 +15,24 @@
                 </div>
             </div>
         </div>
-
         <div class="row justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/001-game console.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="games" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[0] }}" id="check-category" name="check-category">
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/045-sing.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="music" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[1] }}" id="check-category" name="check-category">
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/047-travel.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="travel" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[2] }}" id="check-category" name="check-category">
                     </label>
                 </div>
             </div>
@@ -43,19 +42,19 @@
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/042-running.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="sport" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[3] }}" id="check-category" name="check-category">
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/039-reading.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="documentary" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[4] }}" id="check-category" name="check-category">
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/036-photography.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="captured" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[5] }}" id="check-category" name="check-category">
                     </label>
                 </div>
             </div>
@@ -65,19 +64,19 @@
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/011-computer.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="technology" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[6] }}" id="check-category" name="check-category">
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/030-nail polish.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="fashion" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[7] }}" id="check-category" name="check-category">
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
                         <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="movies" id="check-category" name="check-category">
+                        <input class="form-check-input" type="checkbox" value="{{ categories[8] }}" id="check-category" name="check-category">
                     </label>
                 </div>
             </div>
