--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -16,23 +16,69 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="d-flex justify-content-center">
+            <div class="col d-flex justify-content-center">
                 <div class="card image-checkbox">
                     <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/001-game console.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[0] }}" id="check-category" name="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/001-game console.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[0] }}" id="check-category" name="check-category">
+                        </div>
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/045-sing.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[1] }}" id="check-category" name="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/045-sing.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[1] }}" id="check-category" name="check-category" checked>
+                        </div>
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/047-travel.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[2] }}" id="check-category" name="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/047-travel.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[2] }}" id="check-category" name="check-category">
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col d-flex justify-content-center">
+                <div class="card image-checkbox">
+                    <label for="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/042-running.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[3] }}" id="check-category" name="check-category">
+                        </div>
+                    </label>
+                </div>
+                <div class="card image-checkbox">
+                    <label for="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/039-reading.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[4] }}" id="check-category" name="check-category">
+                        </div>
+                    </label>
+                </div>
+                <div class="card image-checkbox">
+                    <label for="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/036-photography.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[5] }}" id="check-category" name="check-category">
+                        </div>
                     </label>
                 </div>
             </div>
@@ -41,42 +87,32 @@
             <div class="d-flex justify-content-center">
                 <div class="card image-checkbox">
                     <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/042-running.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[3] }}" id="check-category" name="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/011-computer.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[6] }}" id="check-category" name="check-category">
+                        </div>
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/039-reading.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[4] }}" id="check-category" name="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/030-nail polish.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[7] }}" id="check-category" name="check-category">
+                        </div>
                     </label>
                 </div>
                 <div class="card image-checkbox">
                     <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/036-photography.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[5] }}" id="check-category" name="check-category">
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="d-flex justify-content-center">
-                <div class="card image-checkbox">
-                    <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/011-computer.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[6] }}" id="check-category" name="check-category">
-                    </label>
-                </div>
-                <div class="card image-checkbox">
-                    <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/030-nail polish.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[7] }}" id="check-category" name="check-category">
-                    </label>
-                </div>
-                <div class="card image-checkbox">
-                    <label for="check-category">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
-                        <input class="form-check-input" type="checkbox" value="{{ categories[8] }}" id="check-category" name="check-category">
+                        <div class="row justify-content-center">
+                            <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
+                        </div>
+                        <div class="row justify-content-center">
+                            <input class="form-check-input" type="radio" value="{{ categories[8] }}" id="check-category" name="check-category">
+                        </div>
                     </label>
                 </div>
             </div>
