typing effect on index page

--- a/contentagregator/modules/auth/static/css/index.css
+++ b/contentagregator/modules/auth/static/css/index.css
@@ -49,3 +49,9 @@
       opacity:1;
   }
 }
+
+
+.write-news {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: italic;
+}
