--- a/contentagregator/modules/auth/templates/index.html
+++ b/contentagregator/modules/auth/templates/index.html
@@ -9,7 +9,7 @@
       <a href="{{ url_for('news') }}"><h2 class="fade-in" >I want to <strong>see</strong> the news</h2></a>
     </div>
     <div class="col d-flex justify-content-center">
-      <a href="{{ url_for('redactor_zone_get_view') }}"><h2 class="write-news">I want to <strong>write</strong> the news</h2></a>
+      <a href="{{ url_for('redactor_zone_get_view') }}"><h2 class="write-news"></h2></a>
     </div>
   </div>
 </div>
