--- a/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
+++ b/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
@@ -141,3 +141,54 @@ div#wave .dot:nth-child(3) {
 .btn-delete-row {
   padding: 0 !important;
 }
+
+
+/* dashboard section */
+.w {
+  margin: 0 auto;
+  white-space: nowrap;
+  width: 100%;
+  height: 600px;
+  position: absolute;
+  margin: 0;
+  overflow: hidden;
+  background: rgba(66, 66, 66, 0.5) url("/static/img/typewriter-1170657_1920.jpg") repeat fixed;
+  background-position: 50% 100%;
+  background-size: cover;
+  position: relative;
+  z-index: 5;
+  font-size: 0;
+}
+
+.i {
+  width: 40px;
+  height: 100%;
+  display: inline-block;
+  position: relative;
+  z-index: 4;
+  padding: 2px;
+  transition: all 1.3s ease-in-out;
+  background: rgba(66, 66, 66, 0.5) url("/static/img/article-71342_1280.jpg") repeat fixed;
+  background-size: cover;
+  background-position: 50% 100%;
+  border-radius: 0%;
+}
+.i:hover {
+  transition: all 0s linear;
+  opacity: 0;
+}
+
+.status-bar-container {
+  margin-top: 50px;
+}
+
+#progressionContainer {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#progressionBar {
+  width: 1%;
+  height: 30px;
+  background-color: #458b47;
+}
