--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -35,6 +35,9 @@
             {% endif %}
             {% if session['redactor'] %}
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('redactor_zone_get_view') }}">Dashboard</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('how_to_start') }}">How to start?</a>
             </li>
             <li class="nav-item">
