redactor zone border image, base.html refactor

--- a/contentagregator/modules/redactor_zone/templates/redactor_zone.html
+++ b/contentagregator/modules/redactor_zone/templates/redactor_zone.html
@@ -3,58 +3,61 @@
 <link rel="stylesheet" href="{{ url_for('redactor_zone.static', filename='css/redactor_zone.css') }}" type="text/css"/>
 {% endblock %}
 {% block app %}
-<div class="w">
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
-  <div class="i"></div>
+<div class="row">
+  <div class="w">
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+    <div class="i"></div>
+  </div>
 </div>
+
 
 <div class="row justify-content-center status-bar-container">
   <div class="col d-flex justify-content-center">
@@ -66,6 +69,12 @@
   <div id="progressionContainer">
     <div id="progressionBar"></div>
   </div>
+
+<div class="row justify-content-center">
+  <div class="col d-flex justify-content-end">
+    <small>*quantity of the articles that you have provided</small>
+  </div>
+</div>
 
 {% endblock %}
 {% block scripts %}
