--- a/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
+++ b/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
@@ -145,12 +145,9 @@ div#wave .dot:nth-child(3) {
 
 /* dashboard section */
 .w {
-  margin: 0 auto;
+  width: fit-content;
   white-space: nowrap;
-  width: 100%;
   height: 600px;
-  position: absolute;
-  margin: 0;
   overflow: hidden;
   background: rgba(66, 66, 66, 0.5) url("/static/img/typewriter-1170657_1920.jpg") repeat fixed;
   background-position: 50% 100%;
@@ -158,6 +155,8 @@ div#wave .dot:nth-child(3) {
   position: relative;
   z-index: 5;
   font-size: 0;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
 }
 
 .i {
