--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -50,6 +50,7 @@
                 <a class="dropdown-item" href="{{ url_for('create_an_article') }}">Create an article</a>
                 <a class="dropdown-item" href="#">Invite to Your zone</a>
                 <a class="dropdown-item" href="#">Achievements</a>
+                <a class="dropdown-item" href="{{ url_for('user_notes') }}">Notes</a>
               </div>
             </li>
             {% endif %}
