--- a/contentagregator/static/css/general.css
+++ b/contentagregator/static/css/general.css
@@ -192,7 +192,7 @@ img {
 }
 
 /* Style inputs */
-input[type=text], select, textarea {
+input[type=text], select {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
