--- a/contentagregator/modules/redactor_zone/templates/redactor_zone.html
+++ b/contentagregator/modules/redactor_zone/templates/redactor_zone.html
@@ -76,6 +76,20 @@
   </div>
 </div>
 
+<div class="latest-notes-title">
+  <h2>Your latest notes:</h2>
+</div>
+
+<div class="row justify-content-center">
+  <div class="col d-flex justify-content-center">
+    {% for note in latest_notes %}
+    <div class="dashboard-notes">
+      <textarea data-id='{{ note.note_id }}' readonly>{{ note.note_content }}</textarea>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
 {% endblock %}
 {% block scripts %}
 <script src="{{ url_for('redactor_zone.static', filename='scripts/redactor_zone.js') }}"></script>
