redactor zone layout refactor

--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -118,16 +118,17 @@
             </div>
         </div>
     </div>
-    <div class="title-container">
-        <div class="row justify-content-center">
-            <div class="col d-flex justify-content-center">
-                <div class="form-group col-md-6">
-                    <b><label for="title">Type Your's article title!</label></b>
-                    <input type="text" class="form-control" placeholder="Enter a title" id="title" name="title" required>
+    <div class="row justify-content-center">
+        <div class="col-lg d-flex justify-content-center">
+            <div class="title-container">
+                <div class="form-row align-items-center">
+                        <b><label for="title">Type Your's article title!</label></b>
+                        <input type="text" class="form-control" placeholder="Enter a title" id="title" name="title" required>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="article-text-container">
         <div class="row justify-content-center">
             <div class="col d-flex jusify-content-center">
