--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -11,7 +11,7 @@
         <div class="row justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="col">
-                    <h1>Choose Your's article category</h1>
+                    <h1>Choose Your article's category</h1>
                 </div>
             </div>
         </div>
