--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -11,7 +11,7 @@
         <div class="row justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="col">
-                    <h1>Choose Your article's category</h1>
+                    <h1>Choose a category for an Article:</h1>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="col-lg d-flex justify-content-center">
             <div class="title-container">
                 <div class="form-row align-items-center">
-                        <b><label for="title">Type Your's article title!</label></b>
+                        <b><label for="title">Type a title for an Article!</label></b>
                         <input type="text" class="form-control" placeholder="Enter a title" id="title" name="title" required>
                 </div>
             </div>
@@ -133,7 +133,7 @@
         <div class="row justify-content-center">
             <div class="col d-flex jusify-content-center">
                 <div class="form-group col-md-12">
-                    <b><label for="trumbowyg">Type Your article!</label></b>
+                    <b><label for="trumbowyg">Type an Article!</label></b>
                     <div name="trumbowyg" id="trumbowyg" placeholder="Start typing here"></div>
                 </div>
             </div>
