fixing contact template

--- a/contentagregator/modules/contact/templates/contact.html
+++ b/contentagregator/modules/contact/templates/contact.html
@@ -22,7 +22,7 @@
         <label for="subject">Subject</label>
         <input type="text" id="subject" name="subject" placeholder="Subject..">
         <label for="content">Message</label>
-        <textarea id="content" name="content" placeholder="Write something.." style="height:170px"></textarea>
+        <textarea id="content" name="content" placeholder="Write something.." style="height:170px; width: 100%;"></textarea>
         <button type="submit" class="btn btn-light float-right">Submit</button>
       </form>
     </div>
